@@ -18,6 +18,7 @@ endif
 BSP_FILES = start tty $(BSP_MP_O_FILES)
 
 include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
+include $(top_srcdir)/../../../../../../automake/compile.am
 include $(top_srcdir)/../../../../../../automake/lib.am
 
 # bummer; have to use $foreach since % pattern subst rules only replace 1x
