@@ -1,3 +1,8 @@
+2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* shmsupp/Makefile.am, start/Makefile.am, startup/Makefile.am,
+	tty/Makefile.am, wrapup/Makefile.am: Include compile.am
+
 2000-08-10	Joel Sherrill <joel@OARcorp.com>
 
 	* ChangeLog: New file.
